syntax = "proto3";

package ru.practicum.ewm.stats.proto;

import "google/protobuf/empty.proto";
import "messages/user_action.proto";

service UserActionController {
  rpc CollectUserAction(UserActionProto) returns (google.protobuf.Empty);
}